# clan_plan

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  REQUIREMENTS.md  SECURITY.md  build.sh  docker-compose.dev.yml  docker-compose.yml  docker-push.sh  package-lock.json  package.json  tailwind.config.js
assets/: app.css  app.js  tailwind.css
design/: almanac-demo.html
migrations/: 001_initial.sql  002_reunion_slug.sql  003_avail_poll_window.sql  004_expense_confirmations.sql  005_remove_travel_block_type.sql  006_activity_rsvps.sql  007_reunion_family_units.sql  008_survey_multi_response.sql  009_reunion_admins.sql  010_simplify_phases.sql  011_prep_completed_and_location_tz.sql  012_remove_schedule_phase.sql  013_default_activity_duration.sql  014_registration_setting.sql  015_login_attempts.sql  016_activity_category.sql  017_reunion_invites.sql
scripts/: check-migrations.sh
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  phase.rs  state.rs
src/auth/: email.rs  google.rs  mod.rs  password.rs  session.rs
src/models/: activity.rs  announcement.rs  app_settings.rs  availability.rs  expense.rs  feedback.rs  host_rotation.rs  invite.rs  location.rs  login_attempt.rs  media.rs  mod.rs  reunion.rs  schedule.rs  user.rs
src/routes/: activities.rs  admin.rs  announcements.rs  auth.rs  availability.rs  expenses.rs  feedback.rs  helpers.rs  invites.rs  locations.rs  media.rs  mod.rs  pages.rs  reunions.rs  schedule.rs  today.rs
templates/: layout_app.html  layout_auth.html  layout_reunion.html
(+19 files in other folders)
