[package]
name = "clanplan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clanplan"
path = "src/main.rs"

[lib]
name = "clanplan"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "limit", "set-header", "request-id"] }
tower-sessions = "0.12"
tower-sessions-sqlx-store = { version = "0.13", features = ["postgres"] }
tokio-stream = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Templates
askama = "0.12"
askama_axum = "0.4"

# Static assets embedded in binary
rust-embed = "8"

# Auth
argon2 = "0.5"
oauth2 = "4"
base64 = "0.21"
subtle = "2"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
rand = "0.8"
icalendar = "0.15"
reqwest = { version = "0.11", features = ["json"] }
zip = "2"
time = "0.3"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
